# PerpSpot

./: README.md
PerpSpot/: app.py  models.py  pyproject.toml
PerpSpot/examples/: slippage_demo.py
PerpSpot/routes/: api.py  main.py
PerpSpot/services/: analytics_service.py  arbitrage_service.py  bridge_service.py  cache_service.py  fallback_service.py  hyperliquid_service.py  jupiter_service.py  pnl_service.py  polling_service.py  price_fetcher.py  slippage_model.py  ws_listener.py
PerpSpot/static/css/: style.css  styles.css
PerpSpot/static/js/: app.js  bridge-analytics.js  bridge-ui.js  main.js
PerpSpot/templates/: index.html
PerpSpot/tests/: test_bridge_simulation.py  test_slippage_model.py
PerpSpot/utils/: config.py  logger.py  trade_execution.py
